RESOLVED FIXED226332
[GTK4] Navigation swipe snapshot always times out
https://bugs.webkit.org/show_bug.cgi?id=226332
Summary [GTK4] Navigation swipe snapshot always times out
Alice Mikhaylenko
Reported 2021-05-27 07:06:57 PDT
Looks like it's not removed automatically and waits until a timeout.
Attachments
Patch (2.24 KB, patch)
2021-05-27 08:14 PDT, Alice Mikhaylenko
no flags
Patch (3.03 KB, patch)
2021-05-27 08:15 PDT, Alice Mikhaylenko
no flags
Alice Mikhaylenko
Comment 1 2021-05-27 07:07:25 PDT
Alice Mikhaylenko
Comment 2 2021-05-27 07:23:00 PDT
Looks like there are a few more changes, I'll just sync all of them.
Alice Mikhaylenko
Comment 3 2021-05-27 07:39:00 PDT
Meh, that wasn't it, I'll file a new bug for that instead.
Alice Mikhaylenko
Comment 4 2021-05-27 08:14:47 PDT
Created attachment 429879 [details] Patch So it was just a few leftover #ifs.
Alice Mikhaylenko
Comment 5 2021-05-27 08:15:54 PDT
Created attachment 429880 [details] Patch Forgot to commit the changelog.
EWS
Comment 6 2021-05-27 10:07:29 PDT
Committed r278165 (238209@main): <https://commits.webkit.org/238209@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429880 [details].
Note You need to log in before you can comment on or make changes to this bug.