[GTK4] Navigation swipe snapshot always times out https://bugs.webkit.org/show_bug.cgi?id=226332

Patch by Alexander Mikhaylenko <alexm@gnome.org> on 2021-05-27
Reviewed by Michael Catanzaro.

Enable ViewGestureGeometryCollector for GTK4 as well.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::close):
(WebKit::WebPage::mainFrameDidLayout):
* WebProcess/WebPage/WebPage.h:

Canonical link: https://commits.webkit.org/238209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278165 268f45cc-cd09-0410-ab3c-d52691b4dbfc